tests/snapshots/repl_tests__tests__command_popup_model_prefix_after_arg_transition.snap
---
source: tests/repl_tests.rs
assertion_line: 1152
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /model <args>  List models, or switch with /model <alia…│                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
