tests/snapshots/repl_tests__tests__command_popup_no_matches.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  (no matching commands)                                  │                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
