tests/snapshots/repl_tests__tests__command_popup_selected_second.snap
---
source: tests/repl_tests.rs
assertion_line: 1077
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /help  List available commands                          │                    
│  /stats  Show session statistics (tokens, cost)          │                    
│  /context  Show context usage status                     │                    
│  /compact  Force context compaction                      │                    
│  /conversations  List saved conversations                │                    
│  /reset  Reset session statistics                        │                    
│  /new  Start a new conversation                          │                    
│  /save  Save the current conversation                    │                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
