tests/snapshots/repl_tests__tests__command_popup_takes_args_hint.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ Commands ────────────────────────────────────────────────┐                    
│  /load <args>  Load a conversation by id                 │                    
└───────────── ↑/↓ · Tab complete · Enter run · Esc cancel ┘
