tests/snapshots/repl_tests__tests__input_area_cursor_end.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> Hello█                                                  │
└──────────────────────────────────────────────────────────┘
