tests/snapshots/repl_tests__tests__input_area_cursor_middle.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> He█llo                                                  │
└────────────────── Shift/Alt+Enter: newline · Enter: send ┘
