tests/snapshots/repl_tests__tests__input_area_cursor_start.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> █Hello                                                  │
└──────────────────────────────────────────────────────────┘
