tests/snapshots/repl_tests__tests__input_area_empty.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│💬  Message...                                             │
└──────────────────────────────────────────────────────────┘
