tests/snapshots/repl_tests__tests__input_area_long_text.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> █This is a very long input that will wrap to multiple   │
│lines                                                     │
│                                                          │
└────────────────── Shift/Alt+Enter: newline · Enter: send ┘
