tests/snapshots/repl_tests__tests__input_area_multiline_cursor_at_end_of_first_line.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> abc█                                                    │
│def                                                       │
│                                                          │
└────────────────── Shift/Alt+Enter: newline · Enter: send ┘
