tests/snapshots/repl_tests__tests__input_area_multiline_cursor_on_empty_trailing_line.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> abc                                                     │
│█                                                         │
│                                                          │
└────────────────── Shift/Alt+Enter: newline · Enter: send ┘
