tests/snapshots/repl_tests__tests__input_area_multiline_cursor_on_first_line.snap
---
source: tests/repl_tests.rs
expression: "lines.join(\"\\n\")"
---
┌ Input ───────────────────────────────────────────────────┐
│> a█bc                                                    │
│def                                                       │
│                                                          │
└────────────────── Shift/Alt+Enter: newline · Enter: send ┘
